# apis

./: .gitignore  README.md  generate_bar_charts.sh  generate_files_quantity.sh  generate_lines_quantity.sh  get_line_count.sh
Netcoreapi-Minimal/: Netcoreapi-Minimal.sln
Netcoreapi-Minimal/Netcoreapi-Minimal/: Netcoreapi-Minimal.csproj  Program.cs  Startup.cs  api.db
Netcoreapi-Minimal/Netcoreapi-Minimal/Controllers/: OrdersController.cs
Netcoreapi-Minimal/Netcoreapi-Minimal/Dtos/: RequestOrderDto.cs
Netcoreapi-Minimal/Netcoreapi-Minimal/Infra/: Context.cs
Netcoreapi-Minimal/Netcoreapi-Minimal/Migrations/: 20210915000640_Initial_Migration.Designer.cs  20210915000640_Initial_Migration.cs  ContextModelSnapshot.cs
docs/v1/: requirements.md  results.md
netcoreapi/: netcoreapi.sln
netcoreapi/netcoreapi/: Netcoreapi.csproj  Program.cs  Startup.cs
netcoreapi/netcoreapi.application/: Netcoreapi.Application.csproj
netcoreapi/netcoreapi.domain/Entities/: Order.cs
netcoreapi/netcoreapi.infra.memorydb/: Netcoreapi.Infra.Memorydb.csproj
postman/: Order.postman_collection.json  orders.json
rustapi/: Cargo.toml  diesel.toml  install.sh
rustapi/db/: sqlite.db
rustapi/migrations/2021-09-16-011402_create_order/: up.sql
rustapi/src/: db_manager.rs  errors.rs  lib.rs  main.rs  models.rs  order_repository.rs  order_service.rs  schema.rs
rustapi/src/contracts/: mod.rs
rustapi/src/decodes/: mod.rs
rustapi/src/domain/entities/: mod.rs
rustapi/src/domain/repositories/: mod.rs
rustapi/src/entity/: mod.rs
rustapi/src/order_mem_repository/: mod.rs
(+19 files in other folders)
